<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bclass</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tvote">TVoteActivity</string>
    <string name="title_activity_newvote">NewVoteActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_go_vote">GoVoteActivity</string>
    <string name="title_activity_svote">SVoteActivity</string>
    <string name="title_activity_new_exam">NewExamActivity</string>
    <string name="title_activity_texam">TExamActivity</string>
    <string name="title_activity_new_advise">NewAdviseActivity</string>
    <string name="title_activity_show_advise">ShowAdviseActivity</string>
    <string name="title_activity_show_vote">ShowVoteActivity</string>
    <string name="title_activity_show_exam">ShowExamActivity</string>
    <string name="title_activity_go_exam">GoExamActivity</string>
    <string name="title_activity_sexam">SExamActivity</string>
    
    <string name="question1">Q1. 老師今天的到課時間是合理的</string>
    <string name="question2">Q2. 老師教學認真</string>
    <string name="question3">Q3. 老師的評量方式是很公平的</string>
    <string name="question4">Q4. 老師指派對學生有助益的作業</string>
    <string name="points">平均得分: </string>

</resources>
